--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ strip = true  # Automatically strip symbols from the binary.
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 ureq = { version = "*", features = ["json"] }
-confy = {version = "*"}
+confy = "*"
+actix-web = "4"
+once_cell = "1.10.0"
